--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -23,7 +23,6 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
 android {
     compileSdkVersion 29
 
@@ -52,3 +51,11 @@ android {
 flutter {
     source '../..'
 }
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:20.2.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+}
+apply plugin: 'com.google.gms.google-services'
