--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  webengage_plugin:
+  webengage_flutter:
     # When depending on this package from a real application you should use:
     #   webengage_plugin: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
