--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ homepage: https://webengage.com/
 repository: https://github.com/WebEngage/webengage-flutter
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.20.0 <2.0.0"
+  sdk: ">2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
