--- a/example_swift/ios/Podfile
+++ b/example_swift/ios/Podfile
@@ -34,8 +34,24 @@ target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
+
+# ServiceExtension Target
+target 'ServiceExtension' do
+  use_frameworks!
+    platform :ios, '10.0'
+    pod 'WebEngageBannerPush'
+end
+
+# ContentExtension Target
+target 'ContentExtension' do
+  use_frameworks!
+  platform :ios, '10.0'
+  pod 'WebEngageAppEx/ContentExtension'
+end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
   end
 end
+
