--- a/example_swift/pubspec.yaml
+++ b/example_swift/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   random_string: ^2.3.1
   intl: ^0.17.0
+  webengage_flutter: ^1.0.3
   fluttertoast: ^8.0.8
-  webengage_flutter:
     # When depending on this package from a real application you should use:
     #   webengage_plugin: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
-    path: ../
+    #path: ../
 
 dev_dependencies:
   flutter_test:
