--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,10 +22,10 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 33
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -37,5 +37,5 @@ android {
 }
 
 dependencies {
-    api 'com.webengage:android-sdk:3.+'
+    api 'com.webengage:android-sdk:[3,)'
 }
