--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   random_string: ^2.3.1
   intl: ^0.17.0
   permission_handler: ^10.0.0
-
+  firebase_messaging: ^13.0.2
+  firebase_core: ^1.1.0
 
 
 dev_dependencies:
