--- a/example_swift/pubspec.yaml
+++ b/example_swift/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   random_string: ^2.3.1
   intl: ^0.17.0
   webengage_flutter: ^1.0.3
-  fluttertoast: ^8.0.8
+  firebase_core:
+  firebase_messaging: ^13.0.2
+
     # When depending on this package from a real application you should use:
     #   webengage_plugin: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
