--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,10 @@
 group 'com.webengage.webengage_plugin'
-version '1.0'
+version '1.2.1'
 
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -15,7 +15,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -37,5 +37,5 @@ android {
 }
 
 dependencies {
-    api 'com.webengage:android-sdk:[3,)'
+    api 'com.webengage:android-sdk:[4,)'
 }
