--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   random_string: ^2.3.1
   intl: ^0.17.0
   permission_handler: ^10.0.0
+  firebase_messaging: ^14.4.0
+  firebase_core: ^2.9.0
 
 
 
