android method channel removed static keyword, and related changes to it

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   permission_handler: ^10.0.0
   firebase_messaging: ^14.4.0
   firebase_core: ^2.9.0
+  flutter_isolate: ^2.0.4
 
 
 
