--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.webengage.production.one"
+        applicationId "com.webengage.webengage_plugin_example"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
