--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.webengage.webengage_plugin">
+    <application>
+        <meta-data
+            android:name="com.webengage.child.fl"
+            android:value="fl:${we_fl_version}" />
+    </application>
 </manifest>
