--- a/example_swift/ios/Podfile
+++ b/example_swift/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
- platform :ios, '11.0'
+# platform :ios, '11.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -38,14 +38,14 @@ end
 # ServiceExtension Target
 target 'ServiceExtension' do
   use_frameworks!
-    platform :ios, '10.0'
+#    platform :ios, '10.0'
     pod 'WebEngageBannerPush'
 end
 
 # ContentExtension Target
 target 'ContentExtension' do
   use_frameworks!
-  platform :ios, '10.0'
+#  platform :ios, '10.0'
   pod 'WebEngageAppEx/ContentExtension'
 end
 
