--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'com.webengage.webengage_plugin'
-version '1.3.0'
+version '1.3.1'
 
 buildscript {
     repositories {
@@ -57,5 +57,5 @@ String readVersion() {
 }
 
 dependencies {
-    implementation 'com.webengage:android-sdk:4.+'
+    api 'com.webengage:android-sdk:[4,)'
 }
