--- a/DoctorSampleApp/android/app/src/main/AndroidManifest.xml
+++ b/DoctorSampleApp/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.webengage.dev_sample_app">
+    package="com.webengage.flutterSample">
    <application
         android:label="dev_sample_app"
-        android:name="${applicationName}"
+        android:name=".MainApplication"
         android:icon="@mipmap/ic_launcher">
+       <service android:exported="false"
+           android:name=".MyFirebaseMessagingService">
+           <intent-filter>
+               <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+           </intent-filter>
+       </service>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,5 +36,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <meta-data android:name="com.webengage.sdk.android.environment" android:value="us" />
     </application>
 </manifest>
