--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: webengage_flutter
-description: WebEngage Flutter plugin.
+description: The WebEngage Flutter SDK offers solutions for mobile customer engagement, analytics, and retention.
 version: 1.4.1
 homepage: https://webengage.com/
 repository: https://github.com/WebEngage/webengage-flutter
