--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'com.webengage.webengage_plugin'
-version '1.5.0'
+version '1.5.1'
 
 buildscript {
     repositories {
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.4'
     }
 }
 
@@ -22,7 +22,11 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33
+    if (project.android.hasProperty("namespace")) {
+        namespace("com.webengage.webengage_plugin")
+    }
+
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion 21
@@ -57,5 +61,5 @@ String readVersion() {
 }
 
 dependencies {
-    api 'com.webengage:android-sdk:[4,)'
+    api 'com.webengage:android-sdk:4.16.0'
 }
