--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.webengage.webengage_plugin">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <application>
         <meta-data
             android:name="com.webengage.child.fl"
