Android complete code added

--- a/webengage_flutter_android/pubspec.yaml
+++ b/webengage_flutter_android/pubspec.yaml
@@ -25,4 +25,5 @@ flutter:
       android:
         package: com.webengage.webengage_plugin
         pluginClass: WebEngagePlugin
+        dartPluginClass: WebEngageFlutterAndroid
 
