--- a/webengage_flutter/pubspec.yaml
+++ b/webengage_flutter/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ../webengage_flutter_platform_interface
   webengage_flutter_android:
     path: ../webengage_flutter_android
+  webengage_flutter_web:
+    path: ../webengage_flutter_web
 
 
 
@@ -29,3 +31,5 @@ flutter:
         default_package: webengage_flutter_android
       ios:
         pluginClass: WebEngagePlugin
+      web:
+        default_package: webengage_flutter_web
