--- a/webengage_flutter_web/pubspec.yaml
+++ b/webengage_flutter_web/pubspec.yaml
@@ -26,7 +26,7 @@ flutter:
   plugin:
     platforms:
       web:
-        pluginClass: WebengageFlutterWeb
+        pluginClass: WEFlutterWeb
         fileName: webengage_flutter_web.dart
-        dartPluginClass: WebEngageFlutterWeb
+        dartPluginClass: WEFlutterWeb
 
