--- a/webengage_flutter_android/pubspec.yaml
+++ b/webengage_flutter_android/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ^3.5.2
-  flutter: '>=3.3.0'
+  sdk: ">2.12.0 <4.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
