--- a/webengage_flutter_android/pubspec.yaml
+++ b/webengage_flutter_android/pubspec.yaml
@@ -1,6 +1,6 @@
 name: webengage_flutter_android
 description: "A new Flutter project."
-version: 0.0.1
+version: 2.0.0-beta.1
 homepage:
 
 environment:
