--- a/example_swift/pubspec.yaml
+++ b/example_swift/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   random_string: ^2.3.1
   intl: ^0.17.0
   permission_handler: ^10.0.0
+  awesome_notifications:
+  flutter_local_notifications:
+  firebase_messaging:
+  firebase_core_platform_interface:
 
 dev_dependencies:
   flutter_test:
