--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,17 +24,17 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
-    compileSdkVersion 33
-
+    compileSdk 35
+    namespace 'com.webengage.webengage_plugin_example'
     lintOptions {
         disable 'InvalidPackage'
     }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.webengage.webengage_plugin_example"
+        applicationId "com.webengage.Production"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdk 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -53,9 +53,5 @@ flutter {
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    implementation platform('com.google.firebase:firebase-bom:25.12.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-messaging:20.2.1'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
