--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   random_string: ^2.3.1
   intl: ^0.17.0
   permission_handler: ^10.0.0
+  firebase_core: ^3.14.0
+  firebase_messaging: ^15.2.7
+  webview_flutter:
+  flutter_inappwebview:
 
 
 
