--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -53,7 +53,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>WEGLicenseCode</key>
-	<string>YOUR_WEBENGAGE_LICENSE_CODE</string>
+	<string>YOUR_LICENSE_CODE</string>
 	<key>WEGLogLevel</key>
 	<string>VERBOSE</string>
 </dict>
